src/main/java/error/example/domain/runtimeexception/AnotherDomainRuntimeException.java
package error.example.domain.runtimeexception;

public class AnotherDomainRuntimeException extends DomainRuntimeException {

    public AnotherDomainRuntimeException(String message) {
        super(message);
    }
}
